Исправление имени миксинов

--- a/src/scss/core.scss
+++ b/src/scss/core.scss
@@ -5,9 +5,13 @@ body {
 }
 
 .container {
-  @include container(1920px, 15px);
+  @include min-max(320px, 100%, 0);
 }
 
 .wrap {
-  @include container(1270px, 15px);
+  @include min-max(320px, 1200px, 15px);
+}
+
+.visually-hidden {
+  @include visually-hidden;
 }
