--- a/src/scss/mixins.scss
+++ b/src/scss/mixins.scss
@@ -1,25 +1,25 @@
 @mixin clearfix() {
-  &:before,
-  &:after {
-    content: '';
+  &::before,
+  &::after {
     display: table;
     clear: both;
+    content: "";
   }
 }
 
 @mixin min-max($min-width, $max-width, $padding) {
+  box-sizing: border-box;
   min-width: $min-width;
   max-width: $max-width;
   padding: 0 $padding;
-  box-sizing: border-box;
   margin: 0 auto;
 }
 
 @mixin adaptive-video() {
   position: relative;
-  padding-bottom: 56.25%; /* задаёт высоту контейнера для 16:9 (если 4:3 — поставьте 75%) */
-  padding-top: 30px;
   height: 0;
+  padding-top: 30px;
+  padding-bottom: 56.25%; /* задаёт высоту контейнера для 16:9 (если 4:3 — поставьте 75%) */
   overflow: hidden;
 
   iframe {
@@ -29,20 +29,19 @@
     width: 100%;
     height: 100%;
   }
-
 }
 
 @mixin visually-hidden() {
   position: absolute;
   width: 1px;
   height: 1px;
-  margin: -1px;
-  border: 0;
   padding: 0;
-  white-space: nowrap;
-  clip-path: inset(100%);
-  clip: rect(0,0,0,0);
+  margin: -1px;
   overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  clip-path: inset(100%);
+  white-space: nowrap;
+  border: 0;
 }
 
 @function strip-unit($value) {
@@ -69,22 +68,25 @@
 }
 
 @mixin font-include($font-name, $font-style: normal, $font-weight: 400, $woff, $woff2) {
-  font-family: $font-name;
-  font-style: $font-style;
-  font-weight: $font-weight;
-  src: url($woff2) format('woff2'), url($woff) format('woff');
-  font-display: swap;
+
+  @font-face {
+    font-family: $font-name;
+    font-style: $font-style;
+    font-weight: $font-weight;
+    src: url($woff2) format("woff2"), url($woff) format("woff");
+    font-display: swap;
+  }
 }
 
 @mixin button($width: auto, $height: auto, $bg, $fz, $lh, $border, $br, $color) {
-  font-size: $fz;
-  background: $bg;
-  line-height: $lh;
-  border: $border;
-  border-radius: $br;
-  color: $color;
+  display: inline-block;
   width: $width;
   height: $height;
-  display: inline-block;
+  font-size: $fz;
+  line-height: $lh;
+  color: $color;
   text-align: center;
+  background: $bg;
+  border: $border;
+  border-radius: $br;
 }
