добавление БЭМ Linter-а

--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -6,4 +6,4 @@ html(lang="ru")
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
     title Document
   body 
-    a(href="/") Lorem ipsum dolor sit, amet consectetur adipisicing elit. Expedita vel fugit consequuntur minus quis nisi ad ab tenetur quibusdam. 
+    h1 Hello World 
