--- a/src/scss/mixins.scss
+++ b/src/scss/mixins.scss
@@ -22,13 +22,16 @@
   padding-bottom: 56.25%; /* задаёт высоту контейнера для 16:9 (если 4:3 — поставьте 75%) */
   overflow: hidden;
 
-  iframe {
+  iframe,
+  lite-youtube {
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
   }
+
+  @content;
 }
 
 @mixin visually-hidden() {
@@ -79,6 +82,7 @@
 }
 
 @mixin button($width: auto, $height: auto, $bg, $fz, $lh, $border, $br, $color) {
+  box-sizing: border-box;
   display: inline-block;
   width: $width;
   height: $height;
@@ -86,7 +90,11 @@
   line-height: $lh;
   color: $color;
   text-align: center;
+  text-decoration: none;
   background: $bg;
   border: $border;
   border-radius: $br;
+  box-shadow: 0 5px 5px 0 rgb(0 0 0 / 15%);
+  transition: all, 0.3s;
+  @content;
 }
